deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uatbai-api
  namespace: prd-uatbai
spec:
  selector:
    matchLabels:
      app: uatbai-api
  replicas: 1
  template:
    metadata:
      namespace: prd-uatbai
      labels:
        app: uatbai-api
    spec:
      containers:
        - name: uatbai-api
          image: eduardomrodrigues/uatbai-api:latest
          ports:
            - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uatbai-portal
  namespace: prd-uatbai
spec:
  selector:
    matchLabels:
      app: uatbai-portal
  replicas: 1
  template:
    metadata:
      namespace: prd-uatbai
      labels:
        app: uatbai-portal
    spec:
      containers:
        - name: uatbai-portal
          image: eduardomrodrigues/uatbai-portal:latest
          ports:
            - containerPort: 91
---
apiVersion: v1
kind: Service
metadata:
  name: uatbai-portal-svc
  namespace: prd-uatbai
spec:
  selector:
    app: uatbai-portal
  ports:
    - protocol: TCP
      port: 91
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: uatbai-api-svc
  namespace: prd-uatbai
spec:
  selector:
    app: uatbai-api
  ports:
    - protocol: TCP
      port: 90
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: prd-uatbai
  name: ingress-uatbai
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: api.guiodai.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: uatbai-api-svc
                port:
                  number: 90
    - host: www.guiodai.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: uatbai-portal-svc
                port:
                  number: 91
